[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://shuttle_full.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.27688

[node name="World" type="Node2D"]
position = Vector2( 6, 0 )
script = ExtResource( 3 )

[node name="shuttle" type="KinematicBody2D" parent="."]
position = Vector2( 314, 512 )
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="shuttle"]
position = Vector2( -6.10352e-05, 0 )
scale = Vector2( 0.32, 0.32 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shuttle"]
shape = SubResource( 1 )

[node name="topRight" type="Area2D" parent="."]
position = Vector2( 538, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="topRight"]
modulate = Color( 0.372549, 0.168627, 0.168627, 1 )
texture = ExtResource( 1 )

[node name="topRightL" type="Area2D" parent="."]
position = Vector2( 538, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="topRightL"]
texture = ExtResource( 1 )

[node name="topLeftL" type="Area2D" parent="."]
position = Vector2( 58, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="topLeftL"]
texture = ExtResource( 1 )

[node name="downLeftL" type="Area2D" parent="."]
position = Vector2( 58, 960 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="downLeftL"]
texture = ExtResource( 1 )

[node name="downRightL" type="Area2D" parent="."]
position = Vector2( 538, 960 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="downRightL"]
texture = ExtResource( 1 )

[node name="downRight" type="Area2D" parent="."]
position = Vector2( 539.155, 958.911 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="downRight"]
modulate = Color( 0.372549, 0.168627, 0.168627, 1 )
texture = ExtResource( 1 )

[node name="downLeft" type="Area2D" parent="."]
position = Vector2( 59.1099, 961.367 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="downLeft"]
modulate = Color( 0.372549, 0.168627, 0.168627, 1 )
texture = ExtResource( 1 )

[node name="topLeft" type="Area2D" parent="."]
position = Vector2( 58, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="topLeft"]
modulate = Color( 0.372549, 0.168627, 0.168627, 1 )
position = Vector2( 0, 1.52588e-05 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 218.0
margin_top = 64.0
margin_right = 264.0
margin_bottom = 78.0
size_flags_stretch_ratio = 1.29
text = "score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 282.0
margin_top = 64.0
margin_right = 328.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 1178, 352 )
